# pockage

./: .gitignore  CMakeLists.txt  README.md
include/: commands.hpp  commands.hpp~  file.hpp  git.hpp  git.hpp~
include/git2/: experimental.h
lib/: libgit2.1.5.0.dylib
src/: CMakeLists.txt  commands.cpp  main.cpp
